--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
               </div>
               <div class="works__elem">
                 <div class="works__item">
-                  <div class="works__image"><img src="/img/works_item-2.jpg" alt="ALT"></div>
+                  <div class="works__image">
+                    <div class="works__contain"><img src="/img/works_item-2.jpg" alt="ALT"></div>
+                  </div>
                   <div class="works__over over">
                     <div class="over__title">Modal T-shirts</div>
                     <div class="over__subtitle">ux/ui</div>
@@ -220,6 +222,53 @@
             </div>
             <div class="works__button">
               <button> VIEW ALL</button>
+            </div>
+          </div>
+        </section>
+        <section class="price">
+          <div class="container">
+            <h2 class="price__title _title">Pricing Plan</h2>
+            <h3 class="price__subtitle _subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor <br/> incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</h3>
+            <div class="price__row">
+              <div class="price__elem"> 
+                <div class="price__item">
+                  <div class="price__sublabel"> Free Trail</div>
+                  <div class="price__label"><span class="price__text" id="price">00</span><span class="price__freq">per month</span></div>
+                  <ul class="price__list">
+                    <li>30 Free Trail</li>
+                    <li>5 Free Projects</li>
+                    <li>PHP 5 Enabled</li>
+                    <li>24/7 Suports</li>
+                  </ul>
+                  <button class="price__btn">Order Now</button>
+                </div>
+              </div>
+              <div class="price__elem"> 
+                <div class="price__item">
+                  <div class="price__sublabel"> Basic</div>
+                  <div class="price__label"><span class="price__text" id="price">50</span><span class="price__freq">per month</span></div>
+                  <ul class="price__list">
+                    <li>30 Free Trail</li>
+                    <li>5 Free Projects</li>
+                    <li>PHP 5 Enabled</li>
+                    <li>24/7 Suports</li>
+                  </ul>
+                  <button class="price__btn">Order Now</button>
+                </div>
+              </div>
+              <div class="price__elem"> 
+                <div class="price__item">
+                  <div class="price__sublabel"> Ultimates</div>
+                  <div class="price__label"><span class="price__text" id="price">99</span><span class="price__freq">per month</span></div>
+                  <ul class="price__list">
+                    <li>30 Free Trail</li>
+                    <li>5 Free Projects</li>
+                    <li>PHP 5 Enabled</li>
+                    <li>24/7 Suports</li>
+                  </ul>
+                  <button class="price__btn">Order Now</button>
+                </div>
+              </div>
             </div>
           </div>
         </section>
